// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`git.repo.test.sh given: [case1] lint passes when: [t0] \`rhx git.repo.test --what lint\` is run then: output matches snapshot 1`] = `
"🐢 lets ride...

🐚 git.repo.test --what lint
   ├─ status
   │  ├─ 💤 inflight (0s)
   │  └─ 🎉 passed (0s)
   └─ log
      ├─ omitted on success by default
      └─ hint: use \`--log always\` to persist when desired
"
`;

exports[`git.repo.test.sh given: [case2] lint fails when: [t0] \`rhx git.repo.test --what lint\` is run then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what lint
   │  └─ ✋ failed (0s)
   ├─ defects: 3
   ├─ log
   │  ├─ stdout: .log/role=mechanic/skill=git.repo.test/what=lint/ISOTIME.stdout.log
   │  └─ stderr: .log/role=mechanic/skill=git.repo.test/what=lint/ISOTIME.stderr.log
   └─ tip: try \`npm run fix\` then rerun, or Read the log path above for details
"
`;

exports[`git.repo.test.sh given: [case3] npm error (malfunction) when: [t0] \`rhx git.repo.test --what lint\` is run then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what lint
   │  └─ 💥 malfunction (1s)
   └─ log: .log/role=mechanic/skill=git.repo.test/what=lint/ISOTIME.stderr.log

npm command failed. check the log for details.
npm ERR! command not found
"
`;

exports[`git.repo.test.sh given: [case4] no package.json when: [t0] \`rhx git.repo.test --what lint\` is run then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what lint
   └─ error: no package.json found

this skill requires a node.js project with package.json
"
`;

exports[`git.repo.test.sh given: [case7] argument validation when: [t0] --what is omitted then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test
   └─ error: --what is required

usage: git.repo.test.sh --what <lint|unit|integration|acceptance|all>
"
`;

exports[`git.repo.test.sh given: [case7] argument validation when: [t1] --what has unsupported value then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what types
   └─ error: invalid --what value 'types'

valid values: lint | unit | integration | acceptance | all
"
`;

exports[`git.repo.test.sh given: [case8] not in git repo when: [t0] run outside any git repo then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what lint
   └─ error: not in a git repository
"
`;

exports[`git.repo.test.sh given: [case9] lint exits with non-zero (warnings or errors) when: [t0] lint exits with code 1 then: output matches snapshot 1`] = `
"🐢 bummer dude...

🐚 git.repo.test --what lint
   │  └─ ✋ failed (0s)
   ├─ log
   │  ├─ stdout: .log/role=mechanic/skill=git.repo.test/what=lint/ISOTIME.stdout.log
   │  └─ stderr: .log/role=mechanic/skill=git.repo.test/what=lint/ISOTIME.stderr.log
   └─ tip: try \`npm run fix\` then rerun, or Read the log path above for details
"
`;
